# s21_matrix_plus

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  s21_matrix_oop.cpp  s21_matrix_oop.h  s21_matrix_oop.hpp  test.cpp
